--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,123 +19,32 @@ apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 apply plugin: 'kotlin-android-extensions'
 
-def propsFile = rootProject.file('keystore.properties')
-def props = new Properties()
-props.load(new FileInputStream(propsFile))
-
-def buildNumber = System.getenv("BUILD_NUMBER") as Integer ?: Integer.parseInt(VERSION_CODE)
-
-propsFile = rootProject.file('api_keys.properties')
-def apiKeys = new Properties()
-apiKeys.load(new FileInputStream(propsFile))
-
 android {
-    dexOptions {
-        jumboMode = true
-        javaMaxHeapSize "4g"
-    }
-
-    compileSdkVersion parseSdkVersion(COMPILE_SDK)
 
     defaultConfig {
-        multiDexEnabled true
+        applicationId buildInfo.id
+        minSdkVersion versions.minSdk
 
-        applicationId "xyz.klinker.messenger"
-        minSdkVersion parseSdkVersion(project.MIN_SDK)
-        targetSdkVersion parseSdkVersion(TARGET_SDK)
+        versionName(buildInfo.name + '.' + buildInfo.number)
+        versionCode buildInfo.number
 
-        versionName(VERSION_NAME + '.' + buildNumber)
-        versionCode buildNumber
-        project.archivesBaseName = "messenger-${versionName}"
-
-        buildConfigField("String", "GIPHY_API_KEY", "\"${apiKeys['GIPHY']}\"")
-        buildConfigField("String", "ARTICLE_API_KEY", "\"${apiKeys['ARTICLE']}\"")
-        buildConfigField("String", "YOUTUBE_API_KEY", "\"${apiKeys['YOUTUBE']}\"")
-    }
-
-    signingConfigs {
-        debug {
-            storeFile file("../debug.keystore")
-            storePassword "android"
-            keyAlias "androiddebugkey"
-            keyPassword "android"
-        }
-        release {
-            storeFile file(props['keystorefile'])
-            storePassword props['keystorepassword']
-            keyAlias props['keyalias']
-            keyPassword props['keypassword']
-        }
+        project.archivesBaseName = "messenger-${buildInfo.name}.${buildInfo.number}"
     }
 
     buildTypes {
-        debug {
-            versionNameSuffix "-DEBUG"
-            signingConfig signingConfigs.debug
-
-            matchingFallbacks = ['release_fast', 'release']
-        }
-        staging {
-            versionNameSuffix "-STAGING"
-            debuggable true
-            signingConfig signingConfigs.debug
-
-            matchingFallbacks = ['release_fast', 'release']
-        }
-        release_fast {
-            versionNameSuffix "-RELEASE"
-            minifyEnabled false
-            shrinkResources false
-            debuggable true
-            signingConfig signingConfigs.release
-
-            matchingFallbacks = ['release_fast', 'release']
-        }
         release {
-//            minifyEnabled false
-//            shrinkResources false
-            minifyEnabled true
             shrinkResources true
-            proguardFiles 'proguard-android-optimize.txt', 'proguard-rules.pro'
-            signingConfig signingConfigs.release
-
-            matchingFallbacks = ['release_fast', 'release']
         }
     }
 
-    lintOptions {
-        checkReleaseBuilds false
-        abortOnError true
-        disable 'GoogleAppIndexingWarning', 'AllowBackup', 'IconMissingDensityFolder',
-                'InconsistentLayout', 'InvalidPackage', 'TrustAllX509TrustManager',
-                'UnusedResources', 'StaticFieldLeak', 'NestedWeights', 'InflateParams',
-                'MissingTranslation', 'GradleCompatible', 'ApplySharedPref', 'Assert',
-                'LocaleFolder', 'TypographyEllipsis', 'InconsistentArrays', 'DefaultLocale',
-                'AppCompatCustomView', 'UnusedQuantity', 'MergeRootFrame', 'NewApi', 'Typos',
-                'IconDensities', 'IconDuplicates', 'ContentDescription', 'LabelFor'
-        textOutput 'stdout'
-        xmlReport false
-        htmlReport true
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    testOptions {
-        unitTests {
-            includeAndroidResources = true
-        }
-    }
 }
 
 dependencies {
     api project(":shared")
 
     testImplementation 'junit:junit:4.12'
-    testImplementation "org.robolectric:robolectric:$ROBOLECTRIC_VERSION"
-    testImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
+    testImplementation "org.robolectric:robolectric:${versions.robolectric}"
+    testImplementation "org.mockito:mockito-core:${versions.mockito}"
     testImplementation 'org.apache.maven:maven-ant-tasks:2.1.3'
     testImplementation project(path: ':encryption')
 }
