--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -18,107 +18,33 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
-def propsFile = rootProject.file('api_keys.properties')
-def apiKeys = new Properties()
-apiKeys.load(new FileInputStream(propsFile))
-
 android {
-    dexOptions {
-        jumboMode = true
-    }
-
-    compileSdkVersion parseSdkVersion(COMPILE_SDK)
-
-    defaultConfig {
-        multiDexEnabled true
-
-        minSdkVersion parseSdkVersion(project.MIN_SDK)
-        targetSdkVersion parseSdkVersion(TARGET_SDK)
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-        buildConfigField("String", "GIPHY_API_KEY", "\"${apiKeys['GIPHY']}\"")
-        buildConfigField("String", "ARTICLE_API_KEY", "\"${apiKeys['ARTICLE']}\"")
-        buildConfigField("String", "YOUTUBE_API_KEY", "\"${apiKeys['YOUTUBE']}\"")
-    }
-
-    buildTypes {
-        debug {
-            versionNameSuffix "-DEBUG"
-
-            matchingFallbacks = ['release_fast', 'release']
-        }
-        staging {
-            versionNameSuffix "-STAGING"
-            debuggable true
-
-            matchingFallbacks = ['release_fast', 'release']
-        }
-        release_fast {
-            versionNameSuffix "-RELEASE"
-            minifyEnabled false
-            shrinkResources false
-            debuggable true
-
-            matchingFallbacks = ['release_fast', 'release']
-        }
-        release {
-            minifyEnabled true
-            shrinkResources false
-            proguardFiles 'proguard-android-optimize.txt', 'proguard-rules.pro'
-
-            matchingFallbacks = ['release_fast', 'release']
-        }
-    }
-
-    lintOptions {
-        abortOnError true
-        disable 'InvalidPackage', 'UnusedAttribute', 'CommitPrefEdits', 'HardwareIds',
-                'MissingTranslation', 'ContentDescription', 'GradleCompatible', 'InconsistentArrays',
-                'ApplySharedPref', 'Assert', 'DefaultLocale', 'LocaleFolder', 'Typos', 'UnusedQuantity',
-                'StaticFieldLeak', 'UnusedResources', 'TypographyEllipsis', 'TrustAllX509TrustManager',
-                'IconDensities'
-        textOutput 'stdout'
-        xmlReport false
-        htmlReport true
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    testOptions {
-        unitTests {
-            includeAndroidResources = true
-        }
-    }
+    
 }
 
 dependencies {
 
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$KOTLIN_VERSION"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
 
-    //noinspection GradleCompatible
-    api "androidx.core:core-ktx:$ANDROID_X_VERSION"
-    api "androidx.appcompat:appcompat:$ANDROID_X_VERSION"
-    api "androidx.emoji:emoji:$ANDROID_X_VERSION"
-    api "androidx.annotation:annotation:$ANDROID_X_VERSION"
-    api "com.google.android.material:material:$ANDROID_X_VERSION"
-    api "androidx.palette:palette:$ANDROID_X_VERSION"
-    api "androidx.legacy:legacy-preference-v14:$ANDROID_X_VERSION"
-    api "androidx.leanback:leanback:$ANDROID_X_VERSION"
-    api "androidx.percentlayout:percentlayout:$ANDROID_X_VERSION"
-    api "androidx.browser:browser:$ANDROID_X_VERSION"
-    api "androidx.exifinterface:exifinterface:$ANDROID_X_VERSION"
+    api "androidx.core:core-ktx:${versions.androidX}"
+    api "androidx.appcompat:appcompat:${versions.androidX}"
+    api "androidx.emoji:emoji:${versions.androidX}"
+    api "androidx.annotation:annotation:${versions.androidX}"
+    api "com.google.android.material:material:${versions.androidX}"
+    api "androidx.palette:palette:${versions.androidX}"
+    api "androidx.legacy:legacy-preference-v14:${versions.androidX}"
+    api "androidx.leanback:leanback:${versions.androidX}"
+    api "androidx.percentlayout:percentlayout:${versions.androidX}"
+    api "androidx.browser:browser:${versions.androidX}"
+    api "androidx.exifinterface:exifinterface:${versions.androidX}"
 
     api('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') { transitive = true }
-    api "com.google.firebase:firebase-core:$FIREBASE_CORE"
-    api "com.google.firebase:firebase-auth:$FIREBASE_AUTH"
-    api "com.google.android.gms:play-services-maps:$GOOGLE_PLAY_SERVICES_VERSION"
+    api "com.google.firebase:firebase-core:${versions.firebaseCore}"
+    api "com.google.firebase:firebase-auth:${versions.firebaseAuth}"
+    api "com.google.android.gms:play-services-maps:${versions.playServices}"
 
-    annotationProcessor "com.github.bumptech.glide:compiler:$GLIDE_VERSION"
-    api "com.github.bumptech.glide:glide:$GLIDE_VERSION"
+    annotationProcessor "com.github.bumptech.glide:compiler:${versions.glide}"
+    api "com.github.bumptech.glide:glide:${versions.glide}"
 
     api 'com.klinkerapps:android-smsmms:5.0.2'
     api 'com.klinkerapps:link_builder:2.0.3'
@@ -154,7 +80,7 @@ dependencies {
     api(name: 'recyclerview-multiselect', ext: 'aar')
 
     testImplementation 'junit:junit:4.12'
-    testImplementation "org.robolectric:robolectric:$ROBOLECTRIC_VERSION"
-    testImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
+    testImplementation "org.robolectric:robolectric:${versions.robolectric}"
+    testImplementation "org.mockito:mockito-core:${versions.mockito}"
     testImplementation 'org.apache.maven:maven-ant-tasks:2.1.3'
 }
