--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 
     buildTypes {
         release {
+            minifyEnabled true
             shrinkResources true
         }
     }
