--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -17,7 +17,8 @@ android {
 
     buildTypes {
         release {
-            shrinkResources true
+            minifyEnabled false
+            shrinkResources false
         }
     }
 
