--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
         release {
             minifyEnabled true
             shrinkResources true
+            proguardFiles 'proguard-android-optimize.txt', 'proguard-rules.pro'
         }
     }
 
