Revert "use the browse support fragment out of the leanback library, instead of the sofa one, for the tv app"
This reverts commit 92f567d84c4260f0bf4a09a107dcace8f7b5c837.

--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     api project(":api_implementation")
     api project(":encryption")
 
+    api(name: 'sofa', ext: 'aar')
     api(name: 'material-camera', ext: 'aar')
     api(name: 'recyclerview-multiselect', ext: 'aar')
 
