--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     api 'com.klinkerapps:android-chips:1.3.0@aar'
     api 'com.klinkerapps:android-transcoder:1.0.1'
     api 'com.klinkerapps:article_viewer:0.25.3'
-    api 'com.klinkerapps:giphy:1.1.2'
+    api 'com.klinkerapps:giphy:2.0.0'
     api 'com.klinkerapps:floating-tutorial:1.0.4'
 
     api 'com.firebase:firebase-jobdispatcher:0.8.5'
@@ -68,6 +68,7 @@ dependencies {
     api 'com.afollestad.material-dialogs:core:0.9.4.5'
     api 'com.roughike:bottom-bar:2.3.1'
     api 'com.futuremind.recyclerfastscroll:fastscroll:0.2.5'
+    api 'com.miguelcatalan:materialsearchview:1.4.0'
 
     implementation 'com.raycoarana.codeinputview:codeinputview:1.2.5'
     implementation 'com.github.ajalt.reprint:core:3.2.1@aar'
