--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ buildscript {
             'targetSdk'         : 28,
             'minSdk'            : 21,
 
-            'kotlin'            : '1.3.11',
+            'kotlin'            : '1.3.21',
 
             'playServices'      : '16.0.0',
             'glide'             : '4.9.0',
@@ -195,6 +195,18 @@ subprojects {
                     unitTests {
                         includeAndroidResources = true
                     }
+                }
+
+                packagingOptions {
+                    exclude 'META-INF/DEPENDENCIES'
+                    exclude 'META-INF/LICENSE'
+                    exclude 'META-INF/LICENSE.txt'
+                    exclude 'META-INF/license.txt'
+                    exclude 'META-INF/NOTICE'
+                    exclude 'META-INF/NOTICE.txt'
+                    exclude 'META-INF/notice.txt'
+                    exclude 'META-INF/ASL2.0'
+                    exclude 'META-INF/library_release.kotlin_module'
                 }
 
             }
