--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -48,13 +48,13 @@ dependencies {
 
     api 'com.klinkerapps:android-smsmms:5.1.1'
     api 'com.klinkerapps:link_builder:2.0.5'
-    api 'com.klinkerapps:android-chips:1.3.1@aar'
+    api 'com.klinkerapps:android-chips:1.3.2.4-SNAPSHOT@aar'
     api 'com.klinkerapps:android-transcoder:1.0.1'
     api 'com.klinkerapps:article_viewer:0.25.4'
     api 'com.klinkerapps:giphy:2.1.4'
     api 'com.klinkerapps:floating-tutorial:1.1.0'
 
-    api 'com.firebase:firebase-jobdispatcher:0.8.5'
+    api 'com.firebase:firebase-jobdispatcher:0.8.6'
     api 'com.github.apl-devs:appintro:v4.2.0'
     api 'com.github.yalantis:ucrop:2.2.2'
     api 'de.hdodenhof:circleimageview:2.2.0'
