--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 
     api 'com.klinkerapps:android-smsmms:5.1.1'
     api 'com.klinkerapps:link_builder:2.0.5'
-    api 'com.klinkerapps:android-chips:1.3.2.4-SNAPSHOT@aar'
+    api 'com.klinkerapps:android-chips:1.3.2@aar'
     api 'com.klinkerapps:android-transcoder:1.0.1'
     api 'com.klinkerapps:article_viewer:0.25.4'
     api 'com.klinkerapps:giphy:2.1.4'
