--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     api "com.google.firebase:firebase-core:${versions.firebaseCore}"
     api "com.google.firebase:firebase-auth:${versions.firebaseAuth}"
     api "com.google.android.gms:play-services-maps:${versions.playServices}"
+    
+    api 'com.google.firebase:firebase-ml-natural-language:18.2.0'
+    api 'com.google.firebase:firebase-ml-natural-language-smart-reply-model:18.0.0'
 
     annotationProcessor "com.github.bumptech.glide:compiler:${versions.glide}"
     api "com.github.bumptech.glide:glide:${versions.glide}"
