add smart reply action option to the notification. It is not yet querying firebase mlkit for the replies

--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -227,6 +227,10 @@
             android:exported="false" />
 
         <receiver
+            android:name=".receiver.notification_action.SendSmartReplyReceiver"
+            android:exported="false" />
+
+        <receiver
             android:name=".receiver.notification_action.NotificationDeleteReceiver"
             android:exported="false" />
 
