update build config

--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -20,13 +20,17 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
 
+    defaultConfig {
+        minSdkVersion versions.minSdk
+    }
+
 }
 
 dependencies {
 
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
 
-    api "androidx.core:core-ktx:1.0.1"
+    api "androidx.core:core-ktx:1.0.2"
     api "androidx.appcompat:appcompat:1.0.2"
     api "androidx.emoji:emoji:${versions.androidX}"
     api "androidx.annotation:annotation:${versions.androidX}"
