--- a/api_implementation/build.gradle
+++ b/api_implementation/build.gradle
@@ -22,6 +22,10 @@ android {
 
     resourcePrefix 'api_'
 
+    defaultConfig {
+        minSdkVersion versions.minSdk
+    }
+
 }
 
 dependencies {
