--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     api "androidx.percentlayout:percentlayout:${versions.androidX}"
     api "androidx.browser:browser:${versions.androidX}"
     api "androidx.exifinterface:exifinterface:${versions.androidX}"
+    api 'androidx.sharetarget:sharetarget:1.0.0-alpha01'
 
     api('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') { transitive = true }
     api "com.google.firebase:firebase-core:${versions.firebaseCore}"
