--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -31,7 +31,8 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
 
     api "androidx.core:core-ktx:1.0.2"
-    api "androidx.appcompat:appcompat:1.0.2"
+    api "androidx.appcompat:appcompat:1.1.0-beta01"
+    api "androidx.drawerlayout:drawerlayout:1.1.0-alpha01"
     api "androidx.emoji:emoji:${versions.androidX}"
     api "androidx.annotation:annotation:${versions.androidX}"
     api "com.google.android.material:material:1.0.0"
@@ -41,7 +42,7 @@ dependencies {
     api "androidx.percentlayout:percentlayout:${versions.androidX}"
     api "androidx.browser:browser:${versions.androidX}"
     api "androidx.exifinterface:exifinterface:${versions.androidX}"
-    api 'androidx.sharetarget:sharetarget:1.0.0-alpha01'
+    api 'androidx.sharetarget:sharetarget:1.0.0-alpha02'
 
     api('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') { transitive = true }
     api "com.google.firebase:firebase-core:${versions.firebaseCore}"
