--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -368,7 +368,8 @@
         <service android:name=".service.FirebaseResetService" />
         <service android:name=".service.CreateNotificationChannelService" />
         <service android:name=".service.ContactResyncService" />
-        <service android:name=".service.SmsReceivedService" />
+        <service android:name=".service.SmsReceivedService"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <service
             android:name=".service.ComposeTileService"
