--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
 
     api "androidx.core:core-ktx:1.0.2"
-    api "androidx.appcompat:appcompat:1.1.0-beta01"
+    api "androidx.appcompat:appcompat:1.0.2"
     api "androidx.emoji:emoji:${versions.androidX}"
     api "androidx.annotation:annotation:${versions.androidX}"
     api "com.google.android.material:material:1.0.0"
