--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -2,14 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="xyz.klinker.messenger">
 
-    <uses-feature android:name="android.hardware.type.watch" />
+    <uses-feature
+        android:name="android.hardware.type.watch"
+        android:required="true" />
 
     <application android:name=".MessengerApplication"
         android:allowBackup="true" android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name" android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
-        
-        <uses-library android:name="com.google.android.wearable" android:required="false" />
+
+        <uses-library
+            android:name="com.google.android.wearable"
+            android:required="true" />
 
         <meta-data
             android:name="com.google.android.wearable.standalone"
