--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,11 @@ buildscript {
     ]
 
     ext.versions = [
-            'gradlePlugin'      : '3.5.0-beta04',
+            'gradlePlugin'      : '3.5.0-rc01',
             'targetSdk'         : 29,
             'minSdk'            : 21,
 
-            'kotlin'            : '1.3.40',
+            'kotlin'            : '1.3.41',
 
             'playServices'      : '16.0.0',
             'glide'             : '4.9.0',
@@ -45,10 +45,11 @@ buildscript {
             'androidXTester'    : '1.1.0',
             'androidXEspresso'  : '3.1.0',
 
-            'firebaseCore'      : '16.0.8',
-            'firebaseMessaging' : '17.3.4',
-            'firebaseStorage'   : '16.1.0',
-            'firebaseAuth'      : '16.2.0',
+            'firebaseCore'      : '17.0.1',
+            'firebaseMessaging' : '19.0.1',
+            'firebaseStorage'   : '18.1.1',
+            'firebaseAuth'      : '18.1.0',
+            'smartReply'        : '20.0.2',
 
             'mockito'           : '2.18.3',
             'robolectric'       : '4.2',
@@ -66,8 +67,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:${versions.gradlePlugin}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
-        classpath 'com.google.gms:google-services:4.2.0'
-        classpath 'io.fabric.tools:gradle:1.26.1'
+        classpath 'com.google.gms:google-services:4.3.0'
+        classpath 'io.fabric.tools:gradle:1.30.0'
     }
 
 }
