--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,12 @@ buildscript {
 
     ext.buildInfo = [
             'id'                : 'xyz.klinker.messenger',
-            'name'              : '4.11.7',
+            'name'              : '4.11.8',
             'number'            : System.getenv("BUILD_NUMBER") as Integer ?: 135,
     ]
 
     ext.versions = [
-            'gradlePlugin'      : '3.5.0-rc03',
+            'gradlePlugin'      : '3.5.0',
             'targetSdk'         : 29,
             'minSdk'            : 21,
 
