--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ buildscript {
 
             'kotlin'            : '1.3.41',
 
-            'playServices'      : '16.0.0',
+            'playServices'      : '17.0.0',
             'glide'             : '4.9.0',
             'retrofit'          : '2.5.0',
 
@@ -66,7 +66,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:${versions.gradlePlugin}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
-        classpath 'com.google.gms:google-services:4.3.0'
+        classpath 'com.google.gms:google-services:4.3.2'
         classpath 'io.fabric.tools:gradle:1.30.0'
     }
 
@@ -89,13 +89,13 @@ allprojects {
     configurations.all {
         resolutionStrategy.eachDependency { DependencyResolveDetails details ->
             def requested = details.requested
-            if (requested.group == 'com.google.android.gms' && requested.name == 'play-services-basement') {
-                details.useVersion '16.1.0'
-            } else if (requested.group == 'com.google.android.gms' && requested.name == 'play-services-tasks') {
-                details.useVersion '16.0.1'
-            } else if (requested.group == 'com.google.android.gms' && requested.name == 'play-services-base') {
-                details.useVersion '16.0.1'
-            }
+//            if (requested.group == 'com.google.android.gms' && requested.name == 'play-services-basement') {
+//                details.useVersion '16.1.0'
+//            } else if (requested.group == 'com.google.android.gms' && requested.name == 'play-services-tasks') {
+//                details.useVersion '16.0.1'
+//            } else if (requested.group == 'com.google.android.gms' && requested.name == 'play-services-base') {
+//                details.useVersion '16.0.1'
+//            }
         }
     }
 
