--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     api "androidx.percentlayout:percentlayout:${versions.androidX}"
     api "androidx.browser:browser:${versions.androidX}"
     api "androidx.exifinterface:exifinterface:${versions.androidX}"
-    api 'androidx.sharetarget:sharetarget:1.0.0-alpha02'
+    api 'androidx.sharetarget:sharetarget:1.0.0-beta01'
 
     api('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') { transitive = true }
     api "com.google.firebase:firebase-core:${versions.firebaseCore}"
@@ -54,7 +54,7 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:${versions.glide}"
     api "com.github.bumptech.glide:glide:${versions.glide}"
 
-    api 'com.klinkerapps:android-smsmms:5.2.0'
+    api 'com.klinkerapps:android-smsmms:5.2.1-SNAPSHOT'
     api 'com.klinkerapps:link_builder:2.0.5'
     api 'com.klinkerapps:android-chips:1.3.2@aar'
     api 'com.klinkerapps:android-transcoder:1.0.1'
