--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,7 +102,8 @@
             android:configChanges="keyboardHidden"
             android:launchMode="singleTop"
             android:theme="@style/PulseTheme.MessengerActivity"
-            android:resizeableActivity="true" >
+            android:resizeableActivity="true"
+            android:windowSoftInputMode="adjustResize">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
