--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -199,6 +199,10 @@
             android:exported="false" />
 
         <receiver
+            android:name=".service.jobs.RepeatNotificationWork"
+            android:exported="false" />
+
+        <receiver
             android:name=".receiver.notification_action.NotificationDismissedReceiver"
             android:exported="false" />
 
