--- a/api_implementation/build.gradle
+++ b/api_implementation/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:${versions.retrofit}"
 
     implementation "com.google.android.material:material:${versions.androidX}"
-    implementation "androidx.exifinterface:exifinterface:${versions.androidX}"
+    implementation "androidx.exifinterface:exifinterface:${versions.androidXExif}"
 
     implementation "com.google.firebase:firebase-core:${versions.firebaseCore}"
     implementation "com.google.firebase:firebase-storage:${versions.firebaseStorage}"
