--- a/build.gradle
+++ b/build.gradle
@@ -31,24 +31,25 @@ buildscript {
     ]
 
     ext.versions = [
-            'gradlePlugin'      : '3.5.2',
+            'gradlePlugin'      : '3.5.3',
             'targetSdk'         : 29,
             'minSdk'            : 21,
 
-            'kotlin'            : '1.3.60',
+            'kotlin'            : '1.3.61',
 
             'playServices'      : '17.0.0',
-            'glide'             : '4.9.0',
+            'glide'             : '4.10.0',
             'retrofit'          : '2.5.0',
 
             'androidX'          : '1.0.0',
+            'androidXExif'      : '1.1.0',
             'androidXTester'    : '1.1.0',
             'androidXEspresso'  : '3.1.0',
 
-            'firebaseCore'      : '17.2.0',
-            'firebaseMessaging' : '19.0.1',
-            'firebaseStorage'   : '18.1.1',
-            'firebaseAuth'      : '19.1.0',
+            'firebaseCore'      : '17.2.1',
+            'firebaseMessaging' : '20.1.0',
+            'firebaseStorage'   : '19.1.0',
+            'firebaseAuth'      : '19.2.0',
 
             'mockito'           : '2.18.3',
             'robolectric'       : '4.2',
@@ -66,7 +67,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:${versions.gradlePlugin}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
-        classpath 'com.google.gms:google-services:4.3.2'
+        classpath 'com.google.gms:google-services:4.3.3'
         classpath 'io.fabric.tools:gradle:1.30.0'
     }
 
