--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -39,9 +39,9 @@ dependencies {
     api "androidx.preference:preference:1.1.0"
     api "androidx.leanback:leanback:${versions.androidX}"
     api "androidx.percentlayout:percentlayout:${versions.androidX}"
-    api "androidx.browser:browser:${versions.androidX}"
-    api "androidx.exifinterface:exifinterface:${versions.androidX}"
-    api 'androidx.sharetarget:sharetarget:1.0.0-beta01'
+    api "androidx.browser:browser:1.2.0"
+    api "androidx.exifinterface:exifinterface:${versions.androidXExif}"
+    api 'androidx.sharetarget:sharetarget:1.0.0-rc01'
 
     api('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') { transitive = true }
     api "com.google.firebase:firebase-core:${versions.firebaseCore}"
@@ -67,7 +67,7 @@ dependencies {
 
     api 'com.github.apl-devs:appintro:v4.2.0'
     api 'com.github.yalantis:ucrop:2.2.2'
-    api 'de.hdodenhof:circleimageview:2.2.0'
+    api 'de.hdodenhof:circleimageview:3.0.1'
     api 'com.afollestad:sectioned-recyclerview:0.2.3'
     api 'com.afollestad:easyvideoplayer:0.3.0'
     api 'com.afollestad:drag-select-recyclerview:1.0.0'
