--- a/api_keys.properties.example
+++ b/api_keys.properties.example
@@ -1,3 +1,10 @@
+# README
+# You can just copy this file to api_keys.properties if you want.
+# The Giphy and article keys are both public and rate limited at a global level, so if you are planning on using a self-build version of Pulse, you should get your own.
+# The YouTube key is used to preview Google Maps and YouTube links. You could leave it blank if you don't care about that.
+
+
+
 # The public beta Giphy API key.
 # Get your own https://developers.giphy.com/
 GIPHY=dc6zaTOxFJmzC
@@ -6,8 +13,6 @@ GIPHY=dc6zaTOxFJmzC
 # Get your own https://github.com/klinker41/article-android
 ARTICLE=73621d28e6f1eec5b8de2aee774cbdb0
 
-# Pulse uses a Google API key for map previews (if you send a maps.google.com link), and for previewing YouTube links (if you send a youtube.google.com link)
+# The same key is used for Maps and Youtube, as long as you give the correct access in the console.
 # Get your own https://developers.google.com/youtube/v3/getting-started
-# The same key is used for maps and youtube, as long as you give the correct access in the console.
-# If you don't need these features, you can just leave the key blank.
 YOUTUBE=<insert-your-key>
